# pi-day

./: 1mil.txt  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml  pi.cpp
cmake/: FindMPFR.cmake
docker-images/: README.md  build-msvc-win1709.cmd  llvm8-stretch.dockerfile  msvc-win1709.dockerfile
docker-images/llvm-linux/: README.md  build-llvm8-stretch.cmd
docker-images/msvc-win/: README.md  build-msvc-win1709.cmd  build-msvc-win1803.cmd  msvc-win.dockerfile
